Use junit's TemporaryFolder in unit tests instead of commons-io's FileUtils